--- a/03. 제너레이터와 이터레이터/index.html
+++ b/03. 제너레이터와 이터레이터/index.html
@@ -2,8 +2,10 @@
 
 # 제너레이터/이터레이터
 - 제너레이터: 이터레이터이자 이터러블을 생성하는 함수
+          => well-formed 이터레이터 
 
 <script>
+  // *을 붙여서 제너레이터 만듬
   function* gen() {
     yield 1;
     if (false) yield 2;
@@ -17,13 +19,25 @@
   log(iter.next());
   log(iter.next());
 
+  // 이터레이터 가지기 때문에 순회 가능
+  // 유의해야할 것은, 순회할 때는 return 값 없이 순회됨
+  // return 값은 마지막 done이 될 때 return 되는 것
+  // 제너레이터 : 순회할 값을 문장으로 만들 수 있는 것
+  // 제너레이터는 문장을 값으로 만들 수 있고, 그 문장을 통해서 순회할 수 잇는
+  // 값을 만들기 때문에 자바스크립트에서는 제너레이터를 통해서 어떠한 상태나 어떠한 값이든 순회가 가능해짐
+  // 함수형 프로그래밍 관점에서도 굉장히 상징적.
   for (const a of gen()) log(a);
   console.clear();
 </script>
 
+
+<!-- 제너레이터를 활용하여 홀수만 계속 발생시키는 함수 생성 -->
 # odds
 
 <script>
+  // 넘겨준 값부터 시작하여 무한히 i++을 하면서 
+  // 해당 값을 넘겨준다고 가정
+  // 평가할 때만 동작하기 때문에 브라우저가 멈추거나 하는 경우는 없음
   function* infinity(i = 0) {
     while (true) yield i++;
   }
@@ -55,6 +69,7 @@
   console.clear();
 </script>
 
+<!-- 제너레이터는 다양한 이터러블 프로토콜 연산자 사용 가능 -->
 # for of, 전개 연산자, 구조 분해, 나머지 연산자
 
 <script>
