--- a/02. ES6에서의 순회와 이터러블 이터레이터 프로토콜/index.html
+++ b/02. ES6에서의 순회와 이터러블 이터레이터 프로토콜/index.html
@@ -6,13 +6,22 @@
 
 <script>
   const list = [1, 2, 3];
+
+  // 기존 es5
+  // length라는 property에 의존하여 리스트 안에 있는 값 순회
   for (var i = 0; i < list.length; i++) {
     // log(list[i]);
   }
+
+  // 유사배열도 동일한 방법으로 순회
   const str = 'abc';
   for (var i = 0; i < str.length; i++) {
     // log(str[i]);
   }
+
+  // es6
+  // 보다 선언적임. 간결
+  // 순회에 대해 추상화를 통해 개발자에게 큰 길을 열어줌
   for (const a of list) {
     // log(a);
   }
@@ -26,6 +35,10 @@
 <script>
   log('Arr -----------');
   const arr = [1, 2, 3];
+
+  // Symbol.iterator : key로 사용될 수 있음
+  // Symbol.iterator : 하나의 함수 
+  // 
   let iter1 = arr[Symbol.iterator]();
   for (const a of iter1) log(a);
 </script>
@@ -34,6 +47,10 @@
 
 <script>
   log('Set -----------');
+  // set은 set[0] 등의 방법으로 접근 불가
+  // map도 마찬가지
+  // 따라서 for of문은 다른 규약을 가지고 동작되는 것
+  // iterable 프로토콜을 따르기 때문에 for of문이 동작하는것
   const set = new Set([1, 2, 3]);
   for (const a of set) log(a);
 </script>
@@ -43,8 +60,12 @@
 <script>
   log('Map -----------');
   const map = new Map([['a', 1], ['b', 2], ['c', 3]]);
+
+  // keys : MapIterator를 return 
   for (const a of map.keys()) log(a);
   for (const a of map.values()) log(a);
+
+  // key와 value를 entry로 뽑아줌
   for (const a of map.entries()) log(a);
   console.clear();
 </script>
@@ -52,6 +73,8 @@
 ## 이터러블/이터레이터 프로토콜
 - 이터러블: 이터레이터를 리턴하는 [Symbol.iterator]() 를 가진 값
 - 이터레이터: { value, done } 객체를 리턴하는 next() 를 가진 값
+  next매서드를 실행했을 때 {value, done} 객체 리턴됨 === 이터레이터
+  value에 또다른 array가 담김
 - 이터러블/이터레이터 프로토콜: 이터러블을 for...of, 전개 연산자 등과 함께 동작하도록한 규약
 
 ### 사용자 정의 이터러블을 통해 알아보기
@@ -61,9 +84,13 @@
     [Symbol.iterator]() {
       let i = 3;
       return {
+        // 이터레이터는 next 메소드 필요
+        // 또한 next는 value와 done을 return 해야함
         next() {
           return i == 0 ? {done: true} : {value: i--, done: false};
         },
+
+        // well-formed iterator
         [Symbol.iterator]() {
           return this;
         }
@@ -76,7 +103,16 @@
   // log(iterator.next());
   // log(iterator.next());
   // log(iterator.next());
+
+  // 사용자정의 iterator도 for of 순회 가능(Symbol.iterator가 있으니)
   for (const a of iterator) log(a);
+
+
+  // iterator가 자기자신을 반환하는 symbol.iterator를 가지고 있으면
+  // well-formed iterator
+  // iterator도 iterate되도록 만들어야 함
+  // 오픈소스, 브라우저 api들도 다 이터러블 프로토콜을 따르고 있음 (ex_ querySelector)
+  // facebook의 immutable js의 순환 또한 iterator로 구현되어있음
 
   // const arr2 = [1, 2, 3];
   // let iter2 = arr2[Symbol.iterator]();
@@ -86,7 +122,7 @@
 
   for (const a of document.querySelectorAll('*')) log(a);
   const all = document.querySelectorAll('*');
-  let iter3 = all[Symbol.iterator]();
+  let iter3 = all[Symbol.iterator]();     //iterator 실행
   log(iter3.next());
   log(iter3.next());
   log(iter3.next());
@@ -97,6 +133,8 @@
 <script>
   console.clear();
   const a = [1, 2];
+  // iterator 없으면 전개 연산자 사용 불가..
+  // iterable 프로토콜로 spread operator  사용됨...
   // a[Symbol.iterator] = null;
-  log([...a, ...arr, ...set, ...map.keys()]);
+  log([...a, ...[3,4] ,...arr, ...set, ...map.keys()]);
 </script>
