--- a/04. map, filter, reduce/1/1. index.html
+++ b/04. map, filter, reduce/1/1. index.html
@@ -14,6 +14,9 @@
 # map
 
 <script>
+
+  // map 함수  (고차함수)
+  // f라는 함수를 첫 인자로 받아서 어떠한 값을 매핑할 것인가를 정의할 수 있음 (보조함수 전달)
   const map = (f, iter) => {
     let res = [];
     for (const a of iter) {
