--- a/05. 코드를 값으로 다루어 표현력 높이기/1/html/1.html
+++ b/05. 코드를 값으로 다루어 표현력 높이기/1/html/1.html
@@ -19,14 +19,17 @@
   console.clear();
 </script>
 
-# 코드를 값으로 다루어 표현력 높이기
+# 코드를 값으로 다루어 표현력 높이기 (함수형 프로그래밍의 특징 : 코드를 값으로 다룬다 )
 
 ## go, pipe
 
 <script>
   const go = (...args) => reduce((a, f) => f(a), args);
+
+  // 내부적으로는 goㅎ 함수를 사용하는 함수 
   const pipe = (f, ...fs) => (...as) => go(f(...as), ...fs);
 
+  // 인자를 전달하여 즉시 어떤 값을 평가하는데 사용 : go function 
   go(
     add(0, 1),
     a => a + 10,
@@ -34,6 +37,7 @@
     log);
   // 111
 
+  // 3개의 함수를 연속적으로 실행하여 축약하는 함수 
   const f = pipe(
     (a, b) => a + b,
     a => a + 10,
@@ -47,6 +51,8 @@
 
 <script>
 
+// go 함수를 사용하여 읽기 좋은 코드로 만들기 
+// 위에서부터 아래로 읽을 수 있도록 표현됨 
   log(
     reduce(
       add,
