--- a/07. 지연성 1, 8. 지연성 2/2/html/2.html
+++ b/07. 지연성 1, 8. 지연성 2/2/html/2.html
@@ -2,19 +2,32 @@
 
 # 이터러블 중심 프로그래밍에서의 지연 평가 (Lazy Evaluation)
 - 제때 계산법
-- 느긋한 계산법
+- 느긋한 계산법 (정말 필요할 때까지 계산을 미루다가, 필요한 순간에 값들을 평가해나가는 기법 )
 - 제너레이터/이터레이터 프로토콜을 기반으로 구현
 
 ### L.map
 
 <script>
-  // L.map = function *(f, iter) {
-  //   for (const a of iter) yield f(a);
-  // };
-  // var it = L.map(a => a + 10, [1, 2, 3]);
-  // log(it.next());
-  // log(it.next());
-  // log(it.next());
+
+  //  지연 평가를 위하여 별도의 연산을 할 필요없는, 공식적인 자바스크립트의 프로토코를 사용할 수 있게 되었다.
+  // 이전에는 별도의 연산과 비공식적인 방법을 사용해야했다. (안전한 조합성을 가져가기 힘들었다.)
+// 제너레이터 기반으로 이터러블 중심 (리스트 중심. 컬렉션 중심) 프로그래밍 기법은 map, filter, reduce , take 등의 함수들을 기반으로 프로그래밍하는 것을 말함.
+// 어떻게 지연성 구현하고 공식적인 값으로 조합성을 만들어갈 수 있는지 살펴봄 
+
+// 평가를 미루는 성질을 가지고 평가 순서를 조작할 수 있는 준비가 되어있는 이터레이터를 반환하는 함수 
+// L.map은 제너레이터 기반 함수 
+  L.map = function *(f, iter) {
+    for (const a of iter) yield f(a);
+  };
+  var it = L.map(a => a + 10, [1, 2, 3]);
+  log(it.next());
+  log(it.next());
+  log(it.next());
+
+  // 또는 spread operator를 사용하여 펼치면 실제 값 순회하여 계산 진행 
+  // [...it]
+
+  console.clear()
 </script>
 
 ### L.filter
@@ -37,7 +50,7 @@
     let i = -1;
     let res = [];
     while (++i < l) {
-      res.push(i);
+      res.push(i); 
     }
     return res;
   };
