--- a/04. map, filter, reduce/2/html/2.html
+++ b/04. map, filter, reduce/2/html/2.html
@@ -11,12 +11,16 @@
 
   const add = (a, b) => a + b;
 
+  // 2만원 미만의 상품들을 뽑아서 상품들의 토탈 가격 계산하기..
+  // map . filter . reduce 를 중첩하여 코딩 
   log(
     reduce(
       add,
       map(p => p.price,
         filter(p => p.price < 20000, products))));
 
+
+  // 순서 변경 가능 
   log(
     reduce(
       add,
