--- a/02. ES6에서의 순회와 이터러블 이터레이터 프로토콜/index.html
+++ b/02. ES6에서의 순회와 이터러블 이터레이터 프로토콜/index.html
@@ -108,9 +108,9 @@
   for (const a of iterator) log(a);
 
 
-  // iterator가 자기자신을 반환하는 symbol.iterator를 가지고 있으면
-  // well-formed iterator
-  // iterator도 iterate되도록 만들어야 함
+  // iterator가 자기자신을 반환하는 symbol.iterator를 가지고 있으면..!
+  // well-formed iterator..!
+  // iterator도 iterate되도록 만들어야 함 !!
   // 오픈소스, 브라우저 api들도 다 이터러블 프로토콜을 따르고 있음 (ex_ querySelector)
   // facebook의 immutable js의 순환 또한 iterator로 구현되어있음
 
