--- a/07. 지연성 1, 8. 지연성 2/4/html/1.html
+++ b/07. 지연성 1, 8. 지연성 2/4/html/1.html
@@ -14,6 +14,8 @@
     }
   };
 
+  
+
   var it = L.flatten([[1, 2], 3, 4, [5, 6], [7, 8, 9]]);
   log(it.next());
   log(it.next());
@@ -58,6 +60,7 @@
 만일 깊은 Iterable을 모두 펼치고 싶다면 아래와 같이 `L.deepFlat`을 구현하여 사용할 수 있습니다. `L.deepFlat`은 깊은 Iterable을 펼쳐줍니다.
 
 <script>
+  // 기명함수... 유명함수 ....
   L.deepFlat = function* f(iter) {
     for (const a of iter) {
       if (isIterable(a)) yield* f(a);
