--- a/09. 비동기 동시성 프로그래밍/1/html/1-3.html
+++ b/09. 비동기 동시성 프로그래밍/1/html/1-3.html
@@ -1,7 +1,9 @@
 <script src="../lib/fx.js"></script>
 
 ## promise.then의 중요한 규칙
-
+  then 메서드를 통해 꺼낸 결과값이 반드시 프로미스가 아니라, 값이 된다
+  아무리 프로미스가 중첩된다 하더라도 then으로 한번에 결과 꺼낼 수 있음 
+  프로미스 체인이 연속적으로 걸려있어도 원하는 순간에 then으로 한번에 결과 받을 수 있다는 말 
 <script>
   Promise.resolve(Promise.resolve(1)).then(function (a) {
     log(a);
