--- a/10. 비동기 동시성 프로그래밍 2/1/html/1-1.html
+++ b/10. 비동기 동시성 프로그래밍 2/1/html/1-1.html
@@ -1,6 +1,6 @@
 <script src="../lib/fx.js"></script>
 
-## 지연 평가 + Promise - L.map, map, take
+## 지연 평가 + Promise - L.map, map, take : 동기 상황에서만 동작하는 함수들. 이들을 비동기 문맥에서 사용하는 법 알아봄 
 
 <script>
   /*  go(
