--- a/11. 비동기 동시성 프로그래밍 3/1/html/1-1.html
+++ b/11. 비동기 동시성 프로그래밍 3/1/html/1-1.html
@@ -7,6 +7,10 @@
     return new Promise(resolve => setTimeout(() => resolve(), time));
   }
 
+  // async가 붙은 함수는 무조건 promise를 리턴하게 되어있음 
+  // 이 함수 안에서 원하는 효과까지 다 끝내는 코드를 작성한다면 그 함수 안에서는 어느정도 동기적으로 동작
+  // 하지만 그 함수를 통해 어떤 값을 받아서 다른 곳에서 사용하려고 하면 어려움 해당하는 부분이 promise가 되기 때문에
+  // .then이나 다른 비동기 다룰 수 있는 함수를 활용을 해서 값을 받아야 함
   async function delayIdentity(a) {
     await delay(500);
     return a;
@@ -71,6 +75,12 @@
 </script>
 
 ## QnA. 이제 비동기는 async/await로 제어할 수 있는데 왜 파이프라인이 필요한지?
+-> 이터러블 중심으로 파이프라인식 프로그래밍은 비동기 프로그래밍이 아니라 명령형 함수를 더 안전하게 함수형으로 코딩하는 것이 목적
+즉 함수를 합성하는 것이 목적.
+async/await는 오히려 반대로 풀어놓으려는 것 
+결국 두 개념은 서로 다른 문제를 해결하려는 기술. 관련이 크지 않음 
+파이프라인은 동기/비동기 상황에 관심을 가지기 보다는 어떠한 코드를 리스트로 다루면서 연속적인 함수 실행/합성을 통해 조합하여 로직을 테스트하기 쉽고, 유지보수하기 쉽게 
+만드는 것이 목적 
 
 <script>
   function f5(list) {
